# ocpp-codec

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
ocpp_codec/: compat.py  encoders.py  errors.py  exceptions.py  serializer.py  structure.py  types.py  utils.py  validators.py
ocpp_codec/v16/: messages.py  types.py
ocpp_codec/v20/: messages.py  types.py
tests/: messages.py  test_encoders.py  test_serializer.py  test_validators.py  types.py
