[tool.poetry]
name = "ocpp-codec"
version = "0.1.0"
description = "OCPP 1.6 and 2.0 messages encoder in Python"
authors = ["Polyconseil"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-mock = "^1.13"
fissix = "^19.2b1"
dephell = "^0.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
