[metadata]
name = ocpp-codec
version = attr: ocpp_codec.__version__
author = Polyconseil
author_email = blue-dev@polyconseil.fr
license = BSD-3-Clause
license_files = LICENSE.txt
description = OCPP 1.6 and 2.0 messages encoder in Python
long_description = file: README.rst
keywords = ocpp,encoder,serialization
url = https://github.com/Polyconseil/ocpp-codec/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications

[options]
packages = find:
python_requires = >=3.6.0
install_requires =
    python-dateutil==2.*,>=2.8.0
    pytz>=2019.3.0
    dataclasses; python_version == "3.6"
include_package_data = True

[options.packages.find]
exclude=
    tests*

[zest.releaser]
create-wheel = yes
python-file-with-version = ocpp_codec/__init__.py
index-servers =
    polyconseil
